# fsdedup

./: .gitignore  Cargo.toml  README.md  techstack.md  techstack.yml
src/: dedup.rs  main.rs  scan.rs
