[package]
name = "fsdedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
btrfs = "1.2.2"
clap = { version = "3.0.14", features = ["derive"] }
crc64fast = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
block-utils = "0.10.4"
